# ThorPT

./: .gitignore  README.md  meta.json  pyproject.toml
docs/: api.rst  conf.py  index.rst  usage.rst
examples/Example1-TwoRocks/: Penn_Dor_warm_v04.txt  _init_.txt  data.hdf5  jupyter_TwoRocks.ipynb
examples/Example2-MonvisoMetagabbro/: Angiboust2022cut.txt  _init_.txt
examples/Example3-TransmittingFluidModel/: Average_Geotherm.txt  _init_.txt
src/thorpt/: Pathfinder.py  THERIN  ThkOut.txt  XBIN  debugging_recorder.txt  ds62mp.txt  layermodel.txt  meta.json  routines_ThorPT.py  start_ThorPT.py  taufrir.py  taufrir02.py  tc55_AngiRaim.txt  tc55_no_grt.txt  thorpt_dash.py  tunorrad.py  xorki.py
src/thorpt/DataFiles/: MINERAL_NAMES_JUN92hp_to_XMT.txt  MINERAL_NAMES_tc55_AngiRaim_to_XMT.txt  MINERAL_NAMES_tc55_TotoPierre_to_XMT.txt  MINERAL_NAMES_td-ds62-mb50-v07_to_XMT.txt  SSModel_td-ds62-mb50-v07.txt.txt  XMap_MinColors.txt
src/thorpt/valhalla/: Pathfinder.py  THERIN  layermodel.txt  output_Pathfinder.txt  routines_ThorPT.py  tc55.txt  tc55_Serp.txt  tunorrad.py
src/thorpt/valhalla/DataFiles/: MINERAL_NAMES_ds62mp_to_XMT.txt  MINERAL_NAMES_tc55_Serp_to_TE.txt  MINERAL_NAMES_tc55_TotoPierre_F3_to_XMT.txt  MINERAL_NAMES_tc55_to_TE.txt  MINERAL_NAMES_td-ds62-mb50-v07_to_XMT.txt  SSModel_ds62mp.txt.txt  SSModel_tc55.txt.txt  SSModel_tc55_TotoPierre.txt.txt  XMap_MinColors.txt  distribution_coeff_tracers.txt  trace_element_budget.txt
src/thorpt_thorPT/: THERIN  XBIN  debugging_recorder.txt  routines_ThorPT.py  start_ThorPT.py  taufrir.py  taufrir02.py  tc55_Serp.txt  tc55_TotoPierre.txt  tc55_TotoPierre_F3.txt  xorki.py
src/thorpt_thorPT/DataFiles/: DataFormattingForTranslationDatabases.txt  MINERAL_NAMES_ds62mp_to_XMT.txt  MINERAL_NAMES_tc55Serp_to_XMT.txt  MINERAL_NAMES_tc55_to_XMT.txt  SSModel_JUN92hp.bs.txt  SSModel_ds62mp.txt.txt  SSModel_tc55.txt.txt  SSModel_tc55_Serp.txt.txt  XMap_MinColors.txt
src/thorpt_thorPT/docs/source/: api.rst  conf.py  index.rst  usage.rst
src/thorpt_thorPT/valhalla/: JUN92hp.txt  Pathfinder.py  ds62mp.txt  routines_ThorPT.py  tc55_italy.txt  theriak.ini  tunorrad.py  xorki.py
src/thorpt_thorPT/valhalla/DataFiles/: SSModel_JUN92.txt.txt  SSModel_JUN92hp.txt.txt  SSModel_tc55_Serp.txt.txt  (+2 more)
tests/: working_ThorPT.ipynb
tests/jupyter_install_scripts/: ThorPT_jupyter.ipynb  _install_ThorPT.ipynb
tests/jupyter_install_scripts/DataFiles/: _init_.txt
tests/jupyter_test01/: ThorPT_jupyter.ipynb  _install_ThorPT.ipynb
tests/jupyter_test01/DataFiles/: _init_.txt
(+5 files in other folders)
