[build-system]
requires = ["hatchling", "playsound", "numpy", "h5py", "imageio", "pandas", "scipy", "seaborn", "matplotlib"]
build-backend = "hatchling.build"

[project]
name = "thorpt-thorPT"
version = "0.2.0"
authors = [
  { name="Thorsten Markmann", email="thorsten.markmann@unibe.ch" },
]
description = "Petro-geochemical modelling software ThorPT"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib==3.7.1",
    "h5py==3.8.0",
    "imageio==2.31.0",
    "pandas==2.0.2",
    "playsound==1.3.0",
    "scipy==1.10.1",
    "seaborn==0.12.2"
]

[project.urls]
"Homepage" = "https://github.com/neoscalc/ThorPT"
"Bug Tracker" = "https://github.com/neoscalc/ThorPT/issues"